--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "dependencies": {
     "axios": "^0.19.0",
     "date-fns": "^2.0.1",
-    "dompurify": "^2.0.6",
     "gatsby": "^2.2.9",
     "gatsby-awesome-pagination": "^0.3.4",
     "gatsby-image": "^2.2.15",
@@ -34,6 +33,7 @@
     "gatsby-transformer-sharp": "^2.2.12",
     "github-markdown-css": "^3.0.1",
     "gsap": "^2.1.3",
+    "insane": "^2.6.2",
     "node-sass": "^4.11.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
@@ -41,22 +41,7 @@
     "react-helmet": "^5.2.0",
     "react-spring": "^8.0.27",
     "react-typography": "^0.16.19",
-    "typography": "^0.16.19",
-    "xss": "^1.0.6"
-  },
-  "keywords": [
-    "gatsby"
-  ],
-  "license": "MIT",
-  "scripts": {
-    "preload-fonts": "gatsby-preload-fonts",
-    "clean": "gatsby clean",
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "serve": "gatsby serve",
-    "format": "prettier --write '**/*.js'",
-    "lint": "eslint 'src/**/*.{js,jsx}' --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "typography": "^0.16.19"
   },
   "devDependencies": {
     "@tailwindcss/custom-forms": "^0.2.0",
@@ -75,6 +60,20 @@
     "prettier-standard": "^15.0.1",
     "tailwindcss": "^1.1.2",
     "tailwindcss-transitions": "^2.0.1"
+  },
+  "keywords": [
+    "gatsby"
+  ],
+  "license": "MIT",
+  "scripts": {
+    "preload-fonts": "gatsby-preload-fonts",
+    "clean": "gatsby clean",
+    "build": "gatsby build",
+    "develop": "gatsby develop",
+    "serve": "gatsby serve",
+    "format": "prettier --write '**/*.js'",
+    "lint": "eslint 'src/**/*.{js,jsx}' --fix",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
